--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 					<serverId>ossrh</serverId>
 					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>false</autoReleaseAfterClose>
+					<skipStagingRepositoryClose>true</skipStagingRepositoryClose>
 				</configuration>
 			</plugin>
 			<plugin>
