feat: switch to artifact bundle generation for central portal

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,20 @@ jobs:
         run: |
            echo "${{ secrets.GPG_PRIVATE_KEY }}" | base64 -d | gpg --batch --import
 
-      - name: Publish to Maven Central
-        run: mvn clean deploy -P release -DskipTests -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+      - name: Build and Sign (No Deploy)
+        run: mvn clean verify -P release -DskipTests -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}
+
+      - name: Create Deployment Bundle
+        run: |
+          mkdir deployment-bundle
+          cp target/*.jar target/*.pom target/*.asc deployment-bundle/
+          # Remove Exec jar if exists as it's not for central
+          rm -f deployment-bundle/*-exec.jar
+          cd deployment-bundle
+          zip -r ../bundle.zip .
+
+      - name: Upload Bundle to GitHub
+        uses: actions/upload-artifact@v4
+        with:
+          name: maven-central-bundle
+          path: bundle.zip
