feat(v0.0.2): 天枢 (Sky-Core) 仪表盘 v3.0 重大更新
主要功能更新：
1. 🚀 UI 重构：全新毛玻璃 (Glassmorphism) 流式布局，视觉与交互体验全面升级。
2. ⌨️ 效率增强：新增全局快捷键 (Ctrl+K/Enter) 和请求历史回溯功能。
3. 📜 文档导出：支持 API 接口一键导出为 Markdown 格式。
4. ⚙️ 高级配置：增加全局 Headers 设置，支持环境变量与复杂参数解析。
5. 🛡️ 代码健康：修复 API 列表内存泄漏问题，增加错误反馈 UI，统一日志规范。

这是一个里程碑版本，提供了更稳定、更高效的接口调试体验。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8080
 # server.address=127.0.0.1
+# Disable caching for debugging
+spring.thymeleaf.cache=false
+spring.web.resources.cache.period=0
