--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8080
 # Disable caching for debugging
 spring.thymeleaf.cache=false
 spring.web.resources.cache.period=0
+
+# Enable Forwarded Headers Strategy for Nginx/Proxy
+server.forward-headers-strategy=framework
