--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 				<version>0.4.0</version>
 				<extensions>true</extensions>
 				<configuration>
-					<publishingServerId>central</publishingServerId>
+					<publishingServerId>ossrh</publishingServerId>
 					<tokenAuth>true</tokenAuth>
 					<autoPublish>true</autoPublish>
 				</configuration>
